# cc-recursive-team-mode

./: .gitignore  .markdownlint.json  CHANGELOG.md  LICENSE.md  Makefile  README.md  SECURITY.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  question.md
.github/workflows/: ci.yaml  codeql.yaml
docs/: TODO.md  UserStory.md  architecture.md
prompts/: benchmark.txt  review.txt  validate.txt
scripts/: cc-recursive-team.sh
src/cc_recursive/: __init__.py  artifact_parser.py  models.py  prompts.py  runner.py
tests/: conftest.py  test_artifact_parser.py  test_integration.py  test_models.py  test_prompts.py  test_runner.py  test_shell_script.py
tests/prompts/: cheap.txt  review_runner.txt  timeout.txt  validate_repo.txt
